# UAV-Controller

./: .clang-format  .editorconfig  .gitignore  QUICKSTART.md  README.md  REPOSITORY_SUMMARY.md  test_gz_service.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
ELRS/: README.md
ELRS/src/: config.h
ESPNOW_TX/: sdkconfig.defaults
ESPNOW_TX/src/: config.h  main.cpp  protocol.cpp
HAND_IMU_TX/src/: main.cpp
IMU_TX/: README.md  platformio.ini
IMU_TX/include/: README
IMU_TX/lib/: README
IMU_TX/src/: protocol.cpp  protocol.h
TX_RX/: README.md  platformio.ini
TX_RX/src/: config.h  imu_handler.cpp  imu_handler.h  joystick_handler.cpp  joystick_handler.h  main.cpp
Utils/: README.md  drone_visualizer.py
docker/: Dockerfile.firmware  Dockerfile.humble  Dockerfile.sim  README.md
docs/: EXAMPLE_USAGE.md  HARDWARE.md  SETUP_GUIDE.md  SOFTWARE_GUIDE.md
gps/: .gitignore  DASHBOARD.md  gps_dashboard.py  platformio.ini  requirements-dashboard.txt
gps/src/: main.cpp
ros2_ws/: README.md
ros2_ws/src/adapters_crsf/: package.xml  setup.cfg  setup.py
ros2_ws/src/common_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/controllers_lqr/: CMakeLists.txt  package.xml
ros2_ws/src/controllers_lqr/config/: lqr_params.yaml
ros2_ws/src/controllers_lqr/include/controllers_lqr/: lqr.hpp
ros2_ws/src/controllers_lqr/launch/: lqr.launch.py
ros2_ws/src/controllers_lqr/src/: lqr_core.cpp  lqr_node.cpp
ros2_ws/src/controllers_lqr/test/: test_lqr_stability.cpp
ros2_ws/src/controllers_mpc/: CMakeLists.txt  package.xml
ros2_ws/src/controllers_mpc/config/: mpc_params.yaml
ros2_ws/src/controllers_mpc/include/controllers_mpc/: mpc.hpp
ros2_ws/src/controllers_mpc/launch/: mpc.launch.py
ros2_ws/src/controllers_mpc/src/: mpc_core.cpp  mpc_node.cpp
ros2_ws/src/controllers_pid/: CMakeLists.txt  package.xml
ros2_ws/src/controllers_pid/config/: pid_params.yaml
ros2_ws/src/controllers_pid/include/controllers_pid/: pid.hpp
ros2_ws/src/controllers_pid/launch/: pid.launch.py
ros2_ws/src/controllers_pid/src/: pid_core.cpp  pid_node.cpp
ros2_ws/src/controllers_pid/test/: test_pid_antiwindup.cpp
ros2_ws/src/drone_msgs/: CMakeLists.txt
ros2_ws/src/drone_msgs/msg/: MissionStatus.msg  Telemetry.msg  Trajectory.msg  Waypoint.msg
ros2_ws/src/ground_station/: package.xml  setup.py
ros2_ws/src/ground_station/ground_station/: ground_station_cli.py  ground_station_demo_mission.py  ground_station_keyboard_teleop.py  ground_station_telemetry_monitor.py
ros2_ws/src/ground_station/launch/: ground.launch.py
ros2_ws/src/manual_imu_controller/: package.xml  setup.py
ros2_ws/src/manual_imu_controller/config/: imu_controller_params.yaml  imu_protocol_params.yaml
ros2_ws/src/manual_imu_controller/launch/: imu_manual_control.launch.py  imu_manual_sim.launch.py
ros2_ws/src/manual_imu_controller/manual_imu_controller/: __init__.py  imu_controller_node.py  imu_protocol_receiver.py
ros2_ws/src/planner/: package.xml
ros2_ws/src/planner/planner/: planner_server_node.py
ros2_ws/src/px4_bridge/: README.md  setup.py
ros2_ws/src/safety_gate/: CMakeLists.txt  package.xml
ros2_ws/src/safety_gate/config/: safety_params.yaml
ros2_ws/src/safety_gate/include/safety_gate/: safety_gate.hpp
ros2_ws/src/safety_gate/launch/: safety_gate.launch.py
ros2_ws/src/safety_gate/src/: safety_gate_node.cpp
ros2_ws/src/sim_bridge/: setup.py
ros2_ws/src/sim_dyn/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_fast/: setup.cfg  setup.py
ros2_ws/src/sim_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_gazebo/config/: bridge_topics.yaml  bridge_topics_lr_drone.yaml  command_manager_safe_custom.yaml  lr_drone_urdf.rviz  mission_executor_safe_tracking.yaml  planner_server_safe_rrtstar.yaml  terrain_params_forest_demo.yaml
ros2_ws/src/sim_gazebo/launch/: all_in_one_rrt_star_demo.launch.py  bringup.launch.py  headless.launch.py  lr_drone_flight_debug.launch.py  spawn_only.launch.py  view_lr_drone_urdf.launch.py
ros2_ws/src/sim_gazebo/models/lr_drone_controlled/: model.config  model.sdf
ros2_ws/src/sim_gazebo/models/lr_drone_urdf/: lr_drone_alignment.yaml  lr_drone_gazebo.urdf  lr_drone_urdf.urdf  model.config  model.sdf
ros2_ws/src/sim_gazebo/models/lr_drone_urdf/meshes/: Prop_CCW_2.stl  Prop_CW.stl  frame.stl
ros2_ws/src/sim_gazebo/models/x3_velocity_control/: model.config
ros2_ws/src/sim_gazebo/scripts/: generate_lr_drone_models.py
ros2_ws/src/sim_gazebo/sim_gazebo/: path_marker_spawner_node.py  sim_reset_recovery_node.py  terrain_marker_spawner_node.py  terrain_surface_spawner_node.py
ros2_ws/src/sim_gazebo/worlds/: flat_world.sdf  flat_world_lr_drone_controlled.sdf  flat_world_lr_drone_preview.sdf
ros2_ws/src/terrain_generator/: package.xml  setup.cfg  setup.py
ros2_ws/src/uav_algorithms/: setup.py
ros2_ws_v2/: README.md
ros2_ws_v2/src/sim_bridge/: package.xml  setup.py
ros2_ws_v2/src/sim_bridge/sim_bridge/: fastsim_backend_adapter_node.py  gazebo_backend_adapter_node.py  gz_smoke_cmd_node.py
ros2_ws_v2/src/sim_fast/: package.xml
ros2_ws_v2/src/sim_fast/launch/: bringup.launch.py
ros2_ws_v2/src/uav_algorithms/: package.xml  setup.cfg
ros2_ws_v2/src/uav_algorithms/uav_algorithms/: planning_api.py
scripts/: build.sh  check_ros2_v2_topics.sh  check_sim.sh  debug_topics.sh  run_crsf_link_lqr.sh  run_crsf_link_pid.sh  run_imu_manual_hw.sh  run_imu_manual_sim.sh  run_sim_lqr.sh  run_sim_mpc.sh  run_sim_pid.sh  run_terrain_sim.sh  run_v2_fast_demo.sh  run_v2_gazebo_demo.sh  setup_sim_py_venv.sh
sim_py/: INFO.md  __init__.py  controllers.py  dynamics.py  planner.py  requirements-rotorpy.txt  requirements.txt  run_sim.py  sim_config.yaml  terrain_wrapper.py  visualizer.py
sim_py/app/: cli.py  main.py  teleop.py
sim_py/backends/: pointmass_backend.py  rotorpy_backend.py
sim_py/controllers/: __init__.py  basic.py
sim_py/core/: config.py  interfaces.py  registry.py  runner.py  types.py
sim_py/planners/: basic.py
sim_py/tests/: test_backends.py  test_config.py  test_registry.py  test_runner_integration.py
(+62 files in other folders)
