<?xml version="1.0"?>
      <package format="3">
        <name>ground_station</name>
        <version>0.1.0</version>
        <description>Ground station ROS2 nodes for commands, missions, and telemetry</description>
        <maintainer email="maintainer@example.com">Maintainer</maintainer>
        <license>MIT</license>

        <buildtool_depend>ament_python</buildtool_depend>

        <exec_depend>rclpy</exec_depend>
<exec_depend>drone_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>planner</exec_depend>

        <test_depend>ament_flake8</test_depend>
        <test_depend>ament_pep257</test_depend>
        <test_depend>python3-pytest</test_depend>

        <export>
          <build_type>ament_python</build_type>
        </export>
      </package>
