<?xml version="1.0"?>
      <package format="3">
        <name>sim_gazebo</name>
        <version>0.1.0</version>
        <description>Gazebo Sim assets and bringup launches for UAV simulation</description>
        <maintainer email="maintainer@example.com">Maintainer</maintainer>
        <license>MIT</license>

        <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>terrain_generator</exec_depend>
  <exec_depend>sim_bridge</exec_depend>
  <exec_depend>air_unit</exec_depend>
  <exec_depend>planner</exec_depend>

        <test_depend>ament_flake8</test_depend>
        <test_depend>ament_pep257</test_depend>
        <test_depend>python3-pytest</test_depend>

        <export>
          <build_type>ament_python</build_type>
        </export>
      </package>
